--- a/Jp_Practice_Final/test-output/old/Default suite/methods-alphabetical.html
+++ b/Jp_Practice_Final/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c285f4">  <td>20/06/30 20:31:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="APIGetTest_withHeaders.getAPI()[pri:0, instance:test_new.APIGetTest_withHeaders@1e397ed7]">getAPI</td> 
-  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="8aa092">  <td>23/02/15 20:33:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogintoFB.LoginFaceBook(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:test_new.LogintoFB@5e8f9e2d]">LoginFaceBook</td> 
+  <td>main@1016162524</td>   <td></td> </tr>
+<tr bgcolor="75d2d7">  <td>23/02/15 20:33:50</td>   <td>290</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterClass()[pri:0, instance:test_new.LogintoFB@5e8f9e2d]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1016162524</td>   <td></td> </tr>
+<tr bgcolor="75d2d7">  <td>23/02/15 20:33:45</td>   <td>-4945</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.initializeBrowser()[pri:0, instance:test_new.LogintoFB@5e8f9e2d]">&gt;&gt;initializeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1016162524</td>   <td></td> </tr>
+<tr bgcolor="75d2d7">  <td>23/02/15 20:33:50</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.runAfterTest(org.testng.ITestResult)[pri:0, instance:test_new.LogintoFB@5e8f9e2d]">&lt;&lt;runAfterTest</td> 
+<td>&nbsp;</td>  <td>main@1016162524</td>   <td></td> </tr>
+<tr bgcolor="75d2d7">  <td>23/02/15 20:33:44</td>   <td>-5110</td> <td title="&gt;&gt;BaseClass.runBeforeEverything()[pri:0, instance:test_new.LogintoFB@5e8f9e2d]">&gt;&gt;runBeforeEverything</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1016162524</td>   <td></td> </tr>
+<tr bgcolor="75d2d7">  <td>23/02/15 20:33:50</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.runBeforeTest(java.lang.reflect.Method,org.testng.ITestResult)[pri:0, instance:test_new.LogintoFB@5e8f9e2d]">&gt;&gt;runBeforeTest</td> 
+<td>&nbsp;</td>  <td>main@1016162524</td>   <td></td> </tr>
+<tr bgcolor="75d2d7">  <td>23/02/15 20:34:07</td>   <td>17112</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:test_new.LogintoFB@5e8f9e2d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1016162524</td>   <td></td> </tr>
 </table>
