--- a/Jp_Practice_Final/test-output/old/Suite/methods-alphabetical.html
+++ b/Jp_Practice_Final/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f3ddb1">  <td>20/07/02 11:23:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="APIGetTest.getAPI()[pri:0, instance:test_new.APIGetTest@1ed4004b]">getAPI</td> 
-  <td>main@293002476</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>20/07/02 11:23:35</td>   <td>2625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="APIPostTest.postAPI()[pri:0, instance:test_new.APIPostTest@ff5b51f]">postAPI</td> 
-  <td>main@293002476</td>   <td></td> </tr>
+<tr bgcolor="b59da4">  <td>22/04/20 17:19:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterClass()[pri:0, instance:test_new.sampleTest@2cf3d63b]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@271800170</td>   <td></td> </tr>
+<tr bgcolor="b59da4">  <td>22/04/20 17:19:42</td>   <td>-6970</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.initializeBrowser()[pri:0, instance:test_new.sampleTest@2cf3d63b]">&gt;&gt;initializeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@271800170</td>   <td></td> </tr>
+<tr bgcolor="b59da4">  <td>22/04/20 17:19:48</td>   <td>-326</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.runAfterTest(org.testng.ITestResult)[pri:0, instance:test_new.sampleTest@2cf3d63b]">&lt;&lt;runAfterTest</td> 
+<td>&nbsp;</td>  <td>main@271800170</td>   <td></td> </tr>
+<tr bgcolor="b59da4">  <td>22/04/20 17:19:41</td>   <td>-7167</td> <td title="&gt;&gt;BaseClass.runBeforeEverything()[pri:0, instance:test_new.sampleTest@2cf3d63b]">&gt;&gt;runBeforeEverything</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@271800170</td>   <td></td> </tr>
+<tr bgcolor="b59da4">  <td>22/04/20 17:19:45</td>   <td>-3420</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.runBeforeTest(java.lang.reflect.Method,org.testng.ITestResult)[pri:0, instance:test_new.sampleTest@2cf3d63b]">&gt;&gt;runBeforeTest</td> 
+<td>&nbsp;</td>  <td>main@271800170</td>   <td></td> </tr>
+<tr bgcolor="6b83cc">  <td>22/04/20 17:19:45</td>   <td>-3416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="sampleTest.sampleTestToFail()[pri:0, instance:test_new.sampleTest@2cf3d63b]">sampleTestToFail</td> 
+  <td>main@271800170</td>   <td></td> </tr>
+<tr bgcolor="b59da4">  <td>22/04/20 17:19:49</td>   <td>676</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:test_new.sampleTest@2cf3d63b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@271800170</td>   <td></td> </tr>
 </table>
